// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error component with status and message 1`] = `
<div
  className="error"
>
  <Connect(Header) />
  <div
    className="error__content"
  >
    <div
      className="error__status"
    >
      500
    </div>
    <div
      className="error__message"
    >
      Что-то пошло не так.
Попробуйте ещё раз или обратитесь в службу поддержки.
    </div>
  </div>
  <footer
    region="ru"
    tld="ru"
  >
    <footer__column
      key="column1"
    >
      <footer__link
        url="https://yandex.ru/company/"
      >
        О Компании
      </footer__link>
      <footer__link
        url="/support"
      >
        Помощь
      </footer__link>
    </footer__column>
    <footer__column
      key="column2"
      side="right"
    >
      <copyright
        contentRegion="ru"
      >
        <footer__link
          url="https://yandex.ru"
        >
          ООО «Яндекс»
        </footer__link>
      </copyright>
    </footer__column>
  </footer>
</div>
`;

exports[`error component with status and untranslated message 1`] = `
<div
  className="error"
>
  <Connect(Header) />
  <div
    className="error__content"
  >
    <div
      className="error__status"
    >
      404
    </div>
    <div
      className="error__message"
    >
      Возможно нужная вам страница была удалена.
Если вы считаете, что страницы нет по нашей вине, напишите нам.
    </div>
  </div>
  <footer
    region="ru"
    tld="ru"
  >
    <footer__column
      key="column1"
    >
      <footer__link
        url="https://yandex.ru/company/"
      >
        О Компании
      </footer__link>
      <footer__link
        url="/support"
      >
        Помощь
      </footer__link>
    </footer__column>
    <footer__column
      key="column2"
      side="right"
    >
      <copyright
        contentRegion="ru"
      >
        <footer__link
          url="https://yandex.ru"
        >
          ООО «Яндекс»
        </footer__link>
      </copyright>
    </footer__column>
  </footer>
</div>
`;

exports[`error component without props 1`] = `
<div
  className="error"
>
  <Connect(Header) />
  <div
    className="error__content"
  >
    <div
      className="error__status"
    >
      500
    </div>
    <div
      className="error__message"
    >
      none
    </div>
  </div>
  <footer
    region="ru"
    tld="ru"
  >
    <footer__column
      key="column1"
    >
      <footer__link
        url="https://yandex.ru/company/"
      >
        О Компании
      </footer__link>
      <footer__link
        url="/support"
      >
        Помощь
      </footer__link>
    </footer__column>
    <footer__column
      key="column2"
      side="right"
    >
      <copyright
        contentRegion="ru"
      >
        <footer__link
          url="https://yandex.ru"
        >
          ООО «Яндекс»
        </footer__link>
      </copyright>
    </footer__column>
  </footer>
</div>
`;
